--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="sign-up-form">
         <img src="img/icons8-user-96.png">
         <h1>Sign Up Now</h1>
-        <form action="/api/login" method="get">
+        <form action="/api/login" method="POST">
             <input type="email" id="email" name="email" class="input-box" placeholder="你 的 邮 箱">
             <div id="email-box"></div>
             <input type="password" class="input-box" placeholder="你 的 密 码">
