--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 
 <body>
     <div class="sign-up-form">
-        <img src="img/icons8-user-96.png">
-        <h1>Sign Up Now</h1>
+        <h1>SIGN ⚓ UP</h1>
         <form action="/api/login" method="POST">
-            <input type="email" id="email" name="email" class="input-box" placeholder="你 的 邮 箱">
-            <div id="email-box"></div>
-            <input type="password" class="input-box" placeholder="你 的 密 码">
+            <div>
+                <label for="email"><img src="img/icons8-user-96.png"></label>
+                <input type="email" id="email" name="email" class="input-box" placeholder="你 的 邮 箱">
+                <div id="email-box"></div>
+            </div>
+            <div>
+                <label for="password"><img src="img/icons8-password-1-96.png"></label>
+                <input type="password" id="password" name="password" class="input-box" placeholder="你 的 密 码">
+            </div>
             <p><span id="checkbox-span"><input type="checkbox"></span> 同意服务条款</p>
             <button type="button" class="signup-btn" onclick="check()">登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
             <hr>
