--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <input type="password" id="password" name="password" class="input-box" placeholder="你 的 密 码">
             </div>
             <p><span id="checkbox-span"><input type="checkbox"></span> 同意服务条款</p>
-            <button type="button" class="signup-btn" onclick="check()">登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
+            <button type="button" class="signup-btn" onclick="check()">登&emsp;录</button>
             <hr>
             <p class="or">或者</p>
-            <button type="button" class="twitter-btn">微&nbsp;&nbsp;信&nbsp;&nbsp;登&nbsp;&nbsp;录</button>
+            <button type="button" class="twitter-btn">微&ensp;信&ensp;登&ensp;录</button>
             <p>没有账号吗?<a href="#">点击注册</a></p>
         </form>
     </div>
