--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="sign-up-form">
         <h1>SIGN ⚓ UP</h1>
-        <form action="/api/login" method="POST">
+        <form action="/api/login" method="POST" id="form">
             <div>
                 <label for="email"><img src="img/icons8-user-96.png" class="login-ui"></label>
                 <input type="email" id="email" name="email" class="input-box" placeholder="你 的 邮 箱" maxlength="64">
@@ -24,7 +24,7 @@
                 <div id="password-box"></div>
             </div>
             <p><span id="checkbox-span"><input type="checkbox"></span> 同意服务条款</p>
-            <button type="button" class="signup-btn" onclick="check()">登&emsp;录</button>
+            <button type="button" class="signup-btn" id="login">登&emsp;录</button>
             <hr>
             <div>
                 <img src="img/icons8-qq-96.png" class="icon" alt="">
