接口调用地址更改，密码校验取消

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1>SIGN ⚓ UP</h1>
         <form action="/api/login" method="POST" id="form">
             <div>
-                <label for="email"><img src="img/icons8-user-96.png" class="login-ui"></label>
-                <input type="email" id="email" name="email" class="input-box" placeholder="你 的 邮 箱" maxlength="64">
+                <label for="username"><img src="img/icons8-user-96.png" class="login-ui"></label>
+                <input type="username" id="username" name="username" class="input-box" placeholder="你 的 邮 箱" maxlength="64">
                 <div id="email-box"></div>
             </div>
             <div>
