--- a/regist.html
+++ b/regist.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/regist.css">
 </head>
 
 <body>
@@ -14,17 +14,17 @@
         <h1>SIGN ⚓ UP</h1>
         <form action="/api/login" method="POST" id="form">
             <div>
-                <label for="username"><img src="img/icons8-user-96.png" class="login-ui"></label>
-                <input type="username" id="username" name="username" class="input-box" placeholder="你 的 邮 箱" maxlength="64">
-                <div id="email-box"></div>
+                <input type="email" id="email" name="email" class="input-box" placeholder="邮 箱 账 号" maxlength="64">
+                <div id="email-box"><img src="" alt="" id="check_img1"></div>
             </div>
             <div>
-                <label for="password"><img src="img/icons8-password-1-96.png" class="login-ui"></label>
-                <input type="password" id="password" name="password" class="input-box" placeholder="你 的 密 码" maxlength="64">
-                <div id="password-box"></div>
+                <input type="password" id="password" name="password" class="input-box" placeholder="输入8位以上包含 数字,英文的密码" maxlength="64">
+                <div id="password-box"><img src="" alt="" id="check_img2"></div>
+                <input type="password" id="two_password" name="password" class="input-box" placeholder="再次输入密码" maxlength="64">
+                <div id="two_password-box"><img src="#" alt="" id="check_img3"></div>
             </div>
             <p><span id="checkbox-span"><input type="checkbox"></span> 同意服务条款</p>
-            <button type="button" class="signup-btn" id="login">登&emsp;录</button>
+            <button type="button" class="signup-btn" id="login">注&emsp;册</button>
             <hr>
             <div>
                 <img src="img/icons8-qq-96.png" class="icon" alt="">
@@ -32,11 +32,11 @@
                 <img src="img/icons8-weibo-96.png" class="icon" alt="">
                 <img src="img/icons8-github-100.png" class="icon" alt="">
             </div>
-            <p>没有账号吗?<a href="注册.html">点击注册</a></p>
+            <p>有账号<a href="#">点击登录</a></p>
         </form>
     </div>
     <footer>
-        <script src="js/reg.js"></script>
+        <script src="js/regist.js"></script>
     </footer>
 </body>
 
