代码分类 添加二次密码校验  增加成功或失误的小图标

--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
                 <img src="img/icons8-weibo-96.png" class="icon" alt="">
                 <img src="img/icons8-github-100.png" class="icon" alt="">
             </div>
-            <p>没有账号吗?<a href="注册.html">点击注册</a></p>
+            <p>没有账号吗?<a href="regist.html">点击注册</a></p>
         </form>
     </div>
     <footer>
-        <script src="js/reg.js"></script>
+        <script src="js/reg_change.js"></script>
+        <script src="js/animation.js"></script>
     </footer>
 </body>
 
