--- a/regist.html
+++ b/regist.html
@@ -11,36 +11,43 @@
 
 <body>
     <div class="sign-up-form">
-        <h1>SIGN ⚓ UP</h1>
-        <form action="/api/login" method="POST" id="form">
+        <h1>SIGN ⚓ IN</h1>
+        <form action="/api/regist" method="POST" id="form">
+            <div>
+                <input type="name" id="name" name="name" class="input-box" placeholder="用户名" maxlength="64">
+                <div id="name-box" class="reminder"></div>
+            </div>
             <div>
                 <input type="email" id="email" name="email" class="input-box" placeholder="邮 箱 账 号" maxlength="64">
                 <div id="email-box" class="reminder"></div>
             </div>
             <div>
-
-                <input type="password" id="password" name="password" class="input-box" placeholder="输入8位以上包含 数字,英文的密码" maxlength="64">
+                <input type="password" id="password" name="password" class="input-box" placeholder="输入8位以上包含 数字,英文的密码"
+                    maxlength="64">
                 <div id="password-box" class="reminder"></div>
             </div>
             <div>
-                <input type="password" id="two_password" name="password" class="input-box" placeholder="再次输入密码" maxlength="64">
+                <input type="password" id="two_password" class="input-box" placeholder="再次输入密码"
+                    maxlength="64">
                 <div id="two_password-box" class="reminder"></div>
             </div>
-            <p><span id="checkbox-span"><input type="checkbox"></span> 同意服务条款</p>
-            <button type="button" class="signup-btn" id="login">注&emsp;册</button>
-            <hr>
-            <div>
-                <img src="img/icons8-qq-96.png" class="icon" alt="">
-                <img src="img/iconfinder_cssi_wechat_214715.png" class="icon" alt="">
-                <img src="img/icons8-weibo-96.png" class="icon" alt="">
-                <img src="img/icons8-github-100.png" class="icon" alt="">
-            </div>
-            <p>有账号<a href="index.html">点击登录</a></p>
+            <button type="button" class="signup-btn" id="regist">注&emsp;册</button>
         </form>
+        <hr>
+        <div>
+            <img src="img/icons8-qq-96.png" class="icon" alt="">
+            <img src="img/iconfinder_cssi_wechat_214715.png" class="icon" alt="">
+            <img src="img/icons8-weibo-96.png" class="icon" alt="">
+            <img src="img/icons8-github-100.png" class="icon" alt="">
+        </div>
+        <p>有账号<a href="index.html">点击登录</a></p>
     </div>
     <footer>
+        <script src="js/jquery-3.4.1.min.js"></script>
+        <script src="js/jquery.serializejson.js"></script>
         <script src="js/regist_change.js"></script>
         <script src="js/animation.js"></script>
     </footer>
 </body>
+
 </html>
