异步校验邮箱

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <form action="/api/login" method="POST" id="form">
             <div>
                 <label for="username"><img src="img/icons8-user-96.png" class="login-ui"></label>
-                <input type="username" id="username" name="username" class="input-box" placeholder="你 的 邮 箱" maxlength="64">
+                <input type="username" id="username" name="username" class="input-box" placeholder="邮箱/用户名" maxlength="64">
                 <div id="email-box"></div>
             </div>
             <div>
@@ -23,17 +23,17 @@
                 <input type="password" id="password" name="password" class="input-box" placeholder="你 的 密 码" maxlength="64">
                 <div id="password-box"></div>
             </div>
-            <p><span id="checkbox-span"><input type="checkbox"></span> 同意服务条款</p>
-            <button type="button" class="signup-btn" id="login">登&emsp;录</button>
-            <hr>
-            <div>
-                <img src="img/icons8-qq-96.png" class="icon" alt="">
-                <img src="img/iconfinder_cssi_wechat_214715.png" class="icon" alt="">
-                <img src="img/icons8-weibo-96.png" class="icon" alt="">
-                <img src="img/icons8-github-100.png" class="icon" alt="">
-            </div>
-            <p>没有账号吗?<a href="regist.html">点击注册</a></p>
         </form>
+        <p><span id="checkbox-span"><input type="checkbox"></span> 同意服务条款</p>
+        <button type="button" class="signup-btn" id="login">登&emsp;录</button>
+        <hr>
+        <div>
+            <img src="img/icons8-qq-96.png" class="icon" alt="">
+            <img src="img/iconfinder_cssi_wechat_214715.png" class="icon" alt="">
+            <img src="img/icons8-weibo-96.png" class="icon" alt="">
+            <img src="img/icons8-github-100.png" class="icon" alt="">
+        </div>
+        <p>没有账号吗?<a href="regist.html">点击注册</a></p>
     </div>
     <footer>
         <script src="js/reg_change.js"></script>
