--- a/regist.html
+++ b/regist.html
@@ -18,17 +18,15 @@
                 <div id="name-box" class="reminder"></div>
             </div>
             <div>
-                <input type="email" id="email" name="email" class="input-box" placeholder="邮 箱 账 号" maxlength="64">
+                <input type="email" id="email" name="email" class="input-box" placeholder="邮箱账号" maxlength="64">
                 <div id="email-box" class="reminder"></div>
             </div>
             <div>
-                <input type="password" id="password" name="password" class="input-box" placeholder="输入8位以上包含 数字,英文的密码"
-                    maxlength="64">
+                <input type="password" id="password" name="password" class="input-box" placeholder="输入8位以上包含 数字,英文的密码" maxlength="64">
                 <div id="password-box" class="reminder"></div>
             </div>
             <div>
-                <input type="password" id="two_password" class="input-box" placeholder="再次输入密码"
-                    maxlength="64">
+                <input type="password" id="two_password" class="input-box" placeholder="再次输入密码" maxlength="64">
                 <div id="two_password-box" class="reminder"></div>
             </div>
             <button type="button" class="signup-btn" id="regist">注&emsp;册</button>
