隐私协议以及相关优化

--- a/login.html
+++ b/login.html
@@ -24,7 +24,6 @@
                 <div id="password-box"></div>
             </div>
         </form>
-        <p><span id="checkbox-span"><input type="checkbox"></span> 同意服务条款</p>
         <button type="button" class="signup-btn" id="login">登&emsp;录</button>
         <hr>
         <div>
@@ -36,7 +35,7 @@
         <p>没有账号吗?<a href="regist.html">点击注册</a></p>
     </div>
     <footer>
-        <script src="js/reg_change.js"></script>
+        <script src="js/login_change.js"></script>
         <script src="js/animation.js"></script>
     </footer>
 </body>
