--- a/regist.html
+++ b/regist.html
@@ -31,6 +31,7 @@
             </div>
             <button type="button" class="signup-btn" id="regist">注&emsp;册</button>
         </form>
+        <p id="terms"><span id="checkbox-span"><input type="checkbox"></span> 同意<a href="#">用户使用协议</a>和<a href="#">隐私条款</a></p>
         <hr>
         <div>
             <img src="img/icons8-qq-96.png" class="icon" alt="">
