--- a/regist.html
+++ b/regist.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
+    <title>regist</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="sign-up-form">
         <h1>SIGN ⚓ IN</h1>
-        <form action="/api/regist" method="POST" id="form">
+        <form action="/api/regist" method="POST" id="regist_form">
             <div>
                 <input type="name" id="name" name="name" class="input-box" placeholder="用户名" maxlength="64">
                 <div id="name-box" class="reminder"></div>
@@ -39,7 +39,7 @@
             <img src="img/icons8-weibo-96.png" class="icon" alt="">
             <img src="img/icons8-github-100.png" class="icon" alt="">
         </div>
-        <p>有账号<a href="index.html">点击登录</a></p>
+        <p>有账号<a href="login.html">点击登录</a></p>
     </div>
     <footer>
         <script src="js/jquery-3.4.1.min.js"></script>
