完善登录请求

--- a/login.html
+++ b/login.html
@@ -15,16 +15,18 @@
         <form action="/api/login" method="POST" id="login_form">
             <div>
                 <label for="username"><img src="img/icons8-user-96.png" class="login-ui"></label>
-                <input type="username" id="username" name="username" class="input-box" placeholder="邮箱/用户名" maxlength="64">
+                <input type="username" id="username" name="username" class="input-box" placeholder="邮箱/用户名"
+                    maxlength="64">
                 <div id="email-box"></div>
             </div>
             <div>
                 <label for="password"><img src="img/icons8-password-1-96.png" class="login-ui"></label>
-                <input type="password" id="password" name="password" class="input-box" placeholder="你 的 密 码" maxlength="64">
+                <input type="password" id="password" name="password" class="input-box" placeholder="你 的 密 码"
+                    maxlength="64">
                 <div id="password-box"></div>
             </div>
+            <button type="button" class="signup-btn" id="login">登&emsp;录</button>
         </form>
-        <button type="button" class="signup-btn" id="login">登&emsp;录</button>
         <hr>
         <div>
             <img src="img/icons8-qq-96.png" class="icon" alt="">
