增加cookie保存用户名功能

--- a/regist.html
+++ b/regist.html
@@ -44,8 +44,7 @@
     <footer>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/jquery.serializejson.js"></script>
-        <script src="js/regist_change.js"></script>
-        <script src="js/animation.js"></script>
+        <script src="js/regist.js"></script>
     </footer>
 </body>
 
