--- a/login.html
+++ b/login.html
@@ -28,6 +28,16 @@
             </div>
             <button type="button" class="signup-btn" id="login">登&emsp;录</button>
         </form>
+        <div id="saveUsername">
+            <label for="save">
+                <input type="checkbox" id="save"><span id="saveText">保存用户名</span>
+            </label>
+        </div>
+        <div id="autoLogin">
+            <label for="auto">
+                <input type="checkbox" id="auto"><span id="autoText">下次自动登录</span>
+            </label>
+        </div>
         <hr>
         <div>
             <img src="img/icons8-qq-96.png" class="icon" alt="">
@@ -40,8 +50,8 @@
     <footer>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/jquery.serializejson.js"></script>
-        <script src="js/login_change.js"></script>
-        <script src="js/animation.js"></script>
+        <script src="js/login.js"></script>
+        <script src="js/cookie.js"></script>
     </footer>
 </body>
 
