--- a/regist.html
+++ b/regist.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>regist</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="#" />        
 </head>
 
 <body>
@@ -44,6 +45,8 @@
     <footer>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/jquery.serializejson.js"></script>
+        <script src="js/cookie.js"></script>
+        <script src="js/load.js"></script>
         <script src="js/regist.js"></script>
     </footer>
 </body>
