--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="#" />
+    <link rel="shortcut icon" href="#" />                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 </head>
 
 <body>
@@ -50,6 +50,7 @@
     <footer>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/jquery.serializejson.js"></script>
+        <script src="js/load.js"></script> 
         <script src="js/login.js"></script>
         <script src="js/cookie.js"></script>
     </footer>
