--- a/index.html
+++ b/index.html
@@ -12,18 +12,72 @@
 </head>
 <body>
 	<header>
-		<div id="top">欢迎来到本网站！<a href="#">登 录</a><a href="#">点击注册</div></a>
+		<div id="top">欢迎来到本网站！<a href="login.html">登 录</a><a href="regist.html">点击注册</div></a>
 	</header>
 	<nav id="nav">
-		<div id="rmtj" class="nav">热门推荐</div>
-		<div id="sgyp" class="nav">手工艺品</div>
-		<div id="jmcq" class="nav">精美瓷器</div>
-		<div id="drcp" class="nav">达人出品</div>
-		<div id="dscp" class="nav">名师出品</div>
+		<div id="rmtj" class="nav">热门推荐
+			<div id="rmtj_text" class="nav_text">
+				大家都喜欢
+			</div>
+		</div>
+		<div id="sgyp" class="nav">手工艺品
+			<div id="sgyp_text" class="nav_text">
+				<div>
+					手工娃娃
+				</div>
+				<div>
+					手工陶制品
+				</div>
+				<div>
+					木雕
+				</div>
+			</div>
+		</div>
+		<div id="jmcq" class="nav">精美瓷器
+			<div id="jmcq_text" class="nav_text">
+				<div>
+					家用瓷碗
+				</div>
+				<div>
+					茶具套装
+				</div>
+				<div>
+					陶瓷艺术品
+				</div>
+			</div>
+		</div>
+		<div id="drcp" class="nav">达人出品
+			<div id="drcp_text" class="nav_text">
+				<div>
+					xxx代表作
+				</div>
+				<div>
+					xxx代表作
+				</div>
+				<div>
+					xxx代表作
+				</div>
+			</div>
+		</div>
+		<div id="mscp" class="nav">名师出品
+			<div id="mscp_text" class="nav_text">
+				<div>
+					林滋剑之xxx
+				</div>
+				<div>
+					林滋剑之xxx
+				</div>
+				<div>
+					林滋剑之xxx
+				</div>
+			</div>
+		</div>
 		<div id="jrwm" class="nav">加入我们
-			<div>邮箱：1031531798@qq.com</div>
-			<div>QQ：1031531798</div>
-			<div>联系电话:13735003264</div>
+			<div id="jrwm_text" class="nav_text">
+				<div>邮箱：1031531798@qq.com</div>
+				<div>QQ：1031531798</div>
+				<div>联系电话:13735003264</div>
+			</div>
 		</div>
 	</nav>
 	<aside id="aside">
@@ -147,6 +201,7 @@
 		<script src="js/jquery.serializejson.js"></script>
 		<script src="js/load.js"></script>
 		<script src="js/carousel.js"></script>
+		<script src="js/nav.js"></script>
 	</footer>
 </body>
  </html>
