--- a/login.html
+++ b/login.html
@@ -50,6 +50,7 @@
     <footer>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/jquery.serializejson.js"></script>
+        <script src="js/jquery.cookie.js"></script>
         <script src="js/load.js"></script> 
         <script src="js/login.js"></script>
         <script src="js/cookie.js"></script>
