--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +11,7 @@
 </head>
 <body>
 	<header>
-		<div id="top">欢迎来到本网站！<a href="login.html">登 录</a><a href="regist.html">点击注册</div></a>
+		<div id="top">欢迎来到本网站！<a href="login.html">登 录</a><a href="regist.html">点击注册</div></a> <div id="logout"><a href="login.html">登出</a></div>
 	</header>
 	<nav id="nav">
 		<div id="rmtj" class="nav">热门推荐
@@ -199,9 +198,11 @@
 	<footer>
 		<script src="js/jquery-3.4.1.min.js"></script>
 		<script src="js/jquery.serializejson.js"></script>
+		<script src="js/jquery.cookie.js"></script>
 		<script src="js/load.js"></script>
 		<script src="js/carousel.js"></script>
 		<script src="js/nav.js"></script>
+		<script src="js/cookie.js"></script>
 	</footer>
 </body>
  </html>
