--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>home</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/carousel.css">
 	<link rel="stylesheet" href="css/commodity_unit.css">
 </head>
+
 <body>
 	<header>
-		<div id="top">欢迎来到本网站！<a href="login.html">登 录</a><a href="regist.html">点击注册</div></a> <div id="logout"><a href="login.html">登出</a></div>
+		<div id="top">
+			<div id="welcome">欢迎来到本网站！<a href="login.html">登出</a></div>
+			<div id="sigin"><a href="login.html">登 录</a><a href="regist.html">点击注册</a></div>
+		</div>
 	</header>
 	<nav id="nav">
 		<div id="rmtj" class="nav">热门推荐
@@ -205,4 +210,5 @@
 		<script src="js/cookie.js"></script>
 	</footer>
 </body>
- </html>
+
+</html>
