登入用户名回显操作

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>home</title>
+	<title>Home</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/carousel.css">
 	<link rel="stylesheet" href="css/commodity_unit.css">
+	<link rel="shortcut icon" href="#">
 </head>
 
 <body>
 	<header>
 		<div id="top">
-			<div id="welcome">欢迎来到本网站！<a href="login.html">登出</a></div>
+			<div id="welcome">欢迎来到本网站！<span id="user-name"></span><a href="login.html">登出</a></div>
 			<div id="sigin"><a href="login.html">登 录</a><a href="regist.html">点击注册</a></div>
 		</div>
 	</header>
