登录只能邮箱

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <form action="/api/login" method="POST" id="login_form">
             <div>
                 <label for="username"><img src="img/icons8-user-96.png" class="login-ui"></label>
-                <input type="username" id="username" name="username" class="input-box" placeholder="邮箱/用户名"
+                <input type="username" id="username" name="username" class="input-box" placeholder="邮箱账号"
                     maxlength="64">
                 <div id="email-box"></div>
             </div>
