nav动画，侧栏，商品动画

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 		</div>
 	</nav>
 	<aside id="aside">
-		<div class="side">热门推荐</div>
-		<div class="side">手工艺品</div>
-		<div class="side">精美瓷器</div>
-		<div class="side">达人出品</div>
-		<div class="side">名师出品</div>
-		<div class="side">关于我们</div>
+		<div class="side" id="side1"><span class="side_text">热门推荐</span></div>
+		<div class="side" id="side2"><span class="side_text"><a href="#commodity_sgyp">手工艺品</a></span></div>
+		<div class="side" id="side3"><span class="side_text">精美瓷器</span></div>
+		<div class="side" id="side4"><span class="side_text">达人出品</span></div>
+		<div class="side" id="side5"><span class="side_text">名师出品</span></div>
+		<div class="side" id="side6"><span class="side_text">关于我们</span></div>
 	</aside>
 	<div>
-		<h1>热门推荐</h1>
+		<h1 id="commodity_rmtj">热门推荐</h1>
 	</div>
 	<div id="Carousel">
 		<div id="c_img">
@@ -127,7 +127,7 @@
 		</div>
 	</div>
 	<div>
-		<h1>手工艺品</h1>
+		<h1 id="commodity_sgyp">手工艺品</h1>
 	</div>
 	<div id="commodity_1">
 		<div class="commodity_unit">
@@ -207,8 +207,8 @@
 		<script src="js/jquery.cookie.js"></script>
 		<script src="js/load.js"></script>
 		<script src="js/carousel.js"></script>
-		<script src="js/nav.js"></script>
 		<script src="js/cookie.js"></script>
+		<script src="js/side_click.js"></script>
 	</footer>
 </body>
 
