--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/carousel.css">
 	<link rel="stylesheet" href="css/commodity_unit.css">
+	<link rel="stylesheet" href="css/footer.css">
 	<link rel="shortcut icon" href="#">
 </head>
 
@@ -202,6 +203,22 @@
 		</div>
 	</div>
 	<footer>
+		<div id="footer">
+			<div id="contact">
+				<h2>
+					联系方式
+				</h2>
+				<div>
+					手机 : 13735003264
+				</div>
+				<br>
+				<div>
+					QQ : 1031531798
+				</div>
+			</div>
+		</div>
+	</footer>
+	<footer id="js">
 		<script src="js/jquery-3.4.1.min.js"></script>
 		<script src="js/jquery.serializejson.js"></script>
 		<script src="js/jquery.cookie.js"></script>
