--- a/login.html
+++ b/login.html
@@ -37,6 +37,9 @@
         </div>
         <p>没有账号吗?<a href="regist.html">点击注册</a></p>
     </div>
+    <div id="loading">
+        <iframe src="loading.html" frameborder="0" scrolling="no" style="width: 500px;height: 500px; z-index: 1000;"></iframe>
+    </div>
     <footer>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/jquery.serializejson.js"></script>
