页面优化 loading动画

--- a/index.html
+++ b/index.html
@@ -20,72 +20,6 @@
 			<div id="sigin"><a href="login.html">登 录</a><a href="regist.html">点击注册</a></div>
 		</div>
 	</header>
-	<nav id="nav">
-		<div id="rmtj" class="nav">热门推荐
-			<div id="rmtj_text" class="nav_text">
-				大家都喜欢
-			</div>
-		</div>
-		<div id="sgyp" class="nav">手工艺品
-			<div id="sgyp_text" class="nav_text">
-				<div>
-					手工娃娃
-				</div>
-				<div>
-					手工陶制品
-				</div>
-				<div>
-					木雕
-				</div>
-			</div>
-		</div>
-		<div id="jmcq" class="nav">精美瓷器
-			<div id="jmcq_text" class="nav_text">
-				<div>
-					家用瓷碗
-				</div>
-				<div>
-					茶具套装
-				</div>
-				<div>
-					陶瓷艺术品
-				</div>
-			</div>
-		</div>
-		<div id="drcp" class="nav">达人出品
-			<div id="drcp_text" class="nav_text">
-				<div>
-					xxx代表作
-				</div>
-				<div>
-					xxx代表作
-				</div>
-				<div>
-					xxx代表作
-				</div>
-			</div>
-		</div>
-		<div id="mscp" class="nav">名师出品
-			<div id="mscp_text" class="nav_text">
-				<div>
-					林滋剑之xxx
-				</div>
-				<div>
-					林滋剑之xxx
-				</div>
-				<div>
-					林滋剑之xxx
-				</div>
-			</div>
-		</div>
-		<div id="jrwm" class="nav">加入我们
-			<div id="jrwm_text" class="nav_text">
-				<div>邮箱：1031531798@qq.com</div>
-				<div>QQ：1031531798</div>
-				<div>联系电话:13735003264</div>
-			</div>
-		</div>
-	</nav>
 	<aside id="aside">
 		<div class="side" id="side1"><span class="side_text">热门推荐</span></div>
 		<div class="side" id="side2"><span class="side_text"><a href="#commodity_sgyp">手工艺品</a></span></div>
@@ -93,6 +27,7 @@
 		<div class="side" id="side4"><span class="side_text">达人出品</span></div>
 		<div class="side" id="side5"><span class="side_text">名师出品</span></div>
 		<div class="side" id="side6"><span class="side_text">关于我们</span></div>
+		<div class="side" id="move_top"><span class="side_text">顶部</span></div>
 	</aside>
 	<div>
 		<h1 id="commodity_rmtj">热门推荐</h1>
