--- a/user.html
+++ b/user.html
@@ -13,46 +13,48 @@
 			用户界面
 		</div>
 	</header>
-	<aside>
-		<div>
-			<div id="ui_side_top">
-				<div id="picture">
-					<div id="picture_img">
-						<img src="img/unlog.jpg" id="user_head">
-						<div id="line"></div>
+	<div id="user_content">
+		<aside>
+			<div>
+				<div id="ui_side_top">
+					<div id="picture">
+						<div id="picture_img">
+							<img src="img/unlog.jpg" id="user_head">
+							<div id="line"></div>
+						</div>
+					</div>
+					<div id="ui_name" class="top_text">
+						用户名 ：Linzijian
+					</div>
+					<div id="ui_email" class="top_text">
+						邮箱 ：1031531798@qq.com
+					</div>
+					<div id="ui_phone" class="top_text">
+						联系电话 ：13735003264
 					</div>
 				</div>
-				<div id="ui_name" class="top_text">
-					用户名 ：Linzijian
+				<div id="ui_side_bottom">
+					<div id="ui_grxx" class="bottom_text">
+						个人信息
+					</div>
+					<div id="ui_wddd" class="bottom_text">
+						我的订单
+					</div>
+					<div id="ui_shdz" class="bottom_text">
+						收货地址
+					</div>
+					<div id="ui_mbsz" class="bottom_text">
+						密保设置
+					</div>
+					<div id="ui_ysxg" class="bottom_text">
+						隐私相关
+					</div>
 				</div>
-				<div id="ui_email" class="top_text">
-					邮箱 ：1031531798@qq.com
-				</div>
-				<div id="ui_phone" class="top_text">
-					联系电话 ：13735003264
-				</div>
-			</div>
-			<div id="ui_side_bottom">
-				<div id="ui_grxx" class="bottom_text">
-					个人信息
-				</div>
-				<div id="ui_wddd" class="bottom_text">
-					我的订单
-				</div>
-				<div id="ui_shdz" class="bottom_text">
-					收货地址
-				</div>
-				<div id="ui_mbsz" class="bottom_text">
-					密保设置
-				</div>
-				<div id="ui_ysxg" class="bottom_text">
-					隐私相关
-				</div>
-			</div>
+			</div >
+		</aside>
+		<div id="user_style">
+			
 		</div>
-	</aside>
-	<div id="user_content">
-		
 	</div>
 	<footer>
 		<script src="js/jquery-3.4.1.min.js"></script>
