个人页面获取用户名

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="shortcut icon" href="#">
 </head>
+
 <body>
 	<header id="header">
 		<div id="top">
-			<div id="welcome">欢迎来到本网站！<span id="user-name"></span><a href="login.html">登出</a></div>
+			<div id="welcome">欢迎来到本网站！<a href="user.html"><span id="user-name"></span></a><a href="login.html">登出</a>
+			</div>
 			<div id="sigin"><a href="login.html">登 录</a><a href="regist.html">点击注册</a></div>
 		</div>
 	</header>
@@ -26,7 +28,10 @@
 		<div class="side" id="side4"><span class="side_text">达人出品</span></div>
 		<div class="side" id="side5"><span class="side_text">名师出品</span></div>
 		<div class="side" id="side6"><span class="side_text">关于我们</span></div>
-		<div id="move_top"><div id="arrows"></div><span class="side_text"><a href="#top" class="aside_a">顶部</a></span></div>
+		<div id="move_top">
+			<div id="arrows"></div><span class="side_text"><a href="javascript:scrollTo(0,0);"
+					class="aside_a">顶部</a></span>
+		</div>
 	</aside>
 	<div id="commodity_rmtj">
 		<h1>热门推荐</h1>
