--- a/user.html
+++ b/user.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>User Interface</title>
 	<link rel="stylesheet" href="css/user.css">
+	<link rel="shortcut icon" href="#">
 </head>
 <body>
 	<header>
@@ -24,14 +25,6 @@
 						</div>
 					</div>
 					<div id="ui_name" class="top_text">
-						用户名 ：Linzijian
-					</div>
-					<div id="ui_email" class="top_text">
-						邮箱 ：1031531798@qq.com
-					</div>
-					<div id="ui_phone" class="top_text">
-						联系电话 ：13735003264
-					</div>
 				</div>
 				<div id="ui_side_bottom">
 					<div id="ui_grxx" class="bottom_text">
@@ -50,6 +43,9 @@
 						隐私相关
 					</div>
 				</div>
+				<div>
+					<img src="img/set.jpg" alt="" id="user_setting">
+				</div>
 			</div >
 		</aside>
 		<div id="user_style">
@@ -59,6 +55,9 @@
 	<footer>
 		<script src="js/jquery-3.4.1.min.js"></script>
 		<script src="js/jquery.serializejson.js"></script>
+		<script src="js/jquery.cookie.js"></script>
+		<script src="js/load.js"></script>
+		<script src="js/user.js"></script>
 	</footer>
 </body>
  </html>
