--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<header id="header">
 		<div id="top">
-			<div id="welcome">欢迎来到本网站！<a href="user.html"><span id="user-name"></span></a><a href="login.html">登出</a>
+			<div id="welcome">欢迎来到本网站！<a href="user.html"><span id="user-name"></span></a><a href="login.html" id="outUser">登出</a>
 			</div>
 			<div id="sigin"><a href="login.html">登 录</a><a href="regist.html">点击注册</a></div>
 		</div>
@@ -165,10 +165,11 @@
 		<script src="js/jquery-3.4.1.min.js"></script>
 		<script src="js/jquery.serializejson.js"></script>
 		<script src="js/jquery.cookie.js"></script>
-		<script src="js/load.js"></script>
 		<script src="js/carousel.js"></script>
 		<script src="js/cookie.js"></script>
 		<script src="js/side_click.js"></script>
+		<script src="js/token.js"></script>
+		<script src="js/load.js"></script>
 	</footer>
 </body>
 
