--- a/login.html
+++ b/login.html
@@ -47,6 +47,7 @@
         <script src="js/load.js"></script>
         <script src="js/login.js"></script>
         <script src="js/cookie.js"></script>
+        <script src="js/token.js"></script>
     </footer>
 </body>
 
