--- a/login.html
+++ b/login.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <div id="cover">
+        <center id="loading">
+            <iframe src="loading.html" frameborder="0" scrolling="no" style="width: 500px;height: 500px; z-index: 1000;"></iframe>
+        </center>
+    </div>
     <div class="sign-up-form">
         <h1>SIGN ⚓ UP</h1>
         <form action="/api/login" method="POST" id="login_form">
@@ -37,9 +42,7 @@
         </div>
         <p>没有账号吗?<a href="regist.html">点击注册</a></p>
     </div>
-    <center id="loading">
-        <iframe src="loading.html" frameborder="0" scrolling="no" style="width: 500px;height: 500px; z-index: 1000;"></iframe>
-    </center>
+    
     <footer>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/jquery.serializejson.js"></script>
