替换alert 使用自制弹窗

--- a/login.html
+++ b/login.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div id="alert">
+        <div id="alert_text"></div>
+    </div>
     <div id="cover">
         <center id="loading">
             <iframe src="loading.html" frameborder="0" scrolling="no" style="width: 500px;height: 500px; z-index: 1000;"></iframe>
