1.主页增加剩余内容 2.侧边导航动画制作

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 	</header>
 	<aside id="aside">
 		<div class="side" id="side1"><span class="side_text">热门推荐</span></div>
-		<div class="side" id="side2"><span class="side_text"><a href="#commodity_sgyp">手工艺品</a></span></div>
+		<div class="side" id="side2"><span class="side_text">手工艺品</span></div>
 		<div class="side" id="side3"><span class="side_text">精美瓷器</span></div>
-		<div class="side" id="side4"><span class="side_text">达人出品</span></div>
-		<div class="side" id="side5"><span class="side_text">名师出品</span></div>
+		<div class="side" id="side4"><span class="side_text">木工艺品</span></div>
+		<div class="side" id="side5"><span class="side_text">大师作品</span></div>
 		<div class="side" id="side6"><span class="side_text">关于我们</span></div>
 		<div id="move_top">
 			<div id="arrows"></div><span class="side_text"><a href="javascript:scrollTo(0,0);"
@@ -65,11 +65,37 @@
 			<a href="" id="lb_a1"></a>
 		</div>
 	</div>
-	<div>
-		<h1 id="commodity_sgyp">手工艺品</h1>
+	<div id="commodity_sgyp">
+		<div class="commodity_title">
+			<h1>手工艺品</h1>
+		</div>
+		<div id="commodity_1">
+			<div id="sgyp"></div>
+		</div>
 	</div>
-	<div id="commodity_1">
-		<div id="app"></div>
+	<div id="commodity_jmcq">
+		<div class="commodity_title">
+			<h1>精美瓷器</h1>
+		</div>
+		<div id="commodity_2">
+			<div id="jmcq"></div>
+		</div>
+	</div>
+	<div id="commodity_mgyp">
+		<div class="commodity_title">
+			<h1>木工艺品</h1>
+		</div>
+		<div id="commodity_3">
+			<div id="mgyp"></div>
+		</div>
+	</div>
+	<div id="commodity_dszp">
+		<div class="commodity_title">
+			<h1>大师作品</h1>
+		</div>
+		<div id="commodity_4">
+			<div id="dszp"></div>
+		</div>
 	</div>
 	<footer>
 		<div id="footer">
@@ -103,7 +129,9 @@
 		<script src="js/load.js"></script>
 		<script src="https://unpkg.com/http-vue-loader"></script>
 		<script src="js/commodity.js"></script>
-    	<script src="/dist/build.js"></script>
+		<script src="/dist/build.js"></script>
+		<script src="js/index.js"></script>
+
 	</footer>
 </body>
 
