--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 		<div class="side" id="side5"><span class="side_text">大师作品</span></div>
 		<div class="side" id="side6"><span class="side_text">关于我们</span></div>
 		<div id="move_top">
-			<div id="arrows"></div><span class="side_text"><a href="javascript:scrollTo(0,0);"
-					class="aside_a">顶部</a></span>
+			<div id="arrows"></div><span class="side_text">顶部</span>
 		</div>
 	</aside>
 	<div id="commodity_rmtj">
